# .dotfiles

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  NVIM_MODERNIZATION_REPORT.md  ORGANIZATION_PLAN.md  README.md  TODO  TODO.md  bootstrap.sh  fix_mise_cursor.sh  fix_zsh_completions.sh  help.md  hk.pkl  install.sh  install_new.sh  migrate_dotfiles.sh  mise.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: cross-platform-auditor.md  mise-tool-curator.md  posix-reviewer.md  symlink-validator.md  zsh-config-reviewer.md
.claude/hooks/: block-protected-files.sh  prettier-edited.sh  shellcheck-edited.sh
.github/workflows/: lint.yml  test-archlinux.yml  test-debian.yml  test-fedora.yml  test-install.yml  test-linux.yml  test-macos.yml  test-ubuntu.yml
.tests/: README.md  check.sh  monitor-build.sh  run-all.sh
.tests/docker/: Alpine.Dockerfile  Archlinux.Dockerfile  Debian-12.Dockerfile  Fedora-41.Dockerfile  Ubuntu-24.04.Dockerfile
ansible/: README.md  playbook.yml  requirements.yml
configs/: keybindings.sh
configs/git/: .gitignore_global
configs/shell/: chussenot.zsh-theme  inputrc
docs/: INSTALLATION.md  MULTI_PLATFORM.md  POSIX_COMPLIANCE.md  SECURITY_REVIEW.md  TOOLING_REVIEW.md  TROUBLESHOOTING.md
docs/studies/: 2026-06-13-rust-conversion-opportunities.md  2026-06-13-rust-efficiency-opportunities.md  2026-06-13-zsh-startup-performance.md
dotfiles/: tool-versions
dotfiles/asdf/: install.sh  tool-versions
dotfiles/mise/: config.toml  (+2 more)
lib/: platform_setup.sh
test-sandbox/: README.md  setup.sh
(+216 files in other folders)
