[project]
name = "dotfiles"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Clement Hussenot", email = "clement.hussenot-desenonges@believe.com"},
]
dependencies = ["libtmux>=0.46.1", "click>=8.1.8"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
