[project]
name = "dotfiles"
version = "0.1.0"
description = "Dotfiles repository — pyproject is present so `pdm run` works for ad-hoc Python tasks."
authors = [
    {name = "Clement Hussenot", email = "clement.hussenot-desenonges@believe.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
